like button align-items:center; problem solve

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,7 +220,7 @@ header .login-wrapper .wallet a:hover{
   display: flex;
   align-items: center;
   font-size: 12px;
-  padding: 4px 10px;
+  padding: 7px 10px;
   background: #fff;
   border-radius: 4px;
 
@@ -231,11 +231,14 @@ header .login-wrapper .wallet a:hover{
 .hero-area .hero-right .img-wrapper .like-wrapper a .heart{
   display: inline-block;
   color: #FF007A;
+  line-height: 0px;
 }
 .hero-area .hero-right .img-wrapper .like-wrapper a .like{
-  color: #283252 !important;
+  color: #283252;
   margin-left: 5px;
   display: inline-block;
+  line-height: 0px;
+  margin-bottom: 0px;
 }
 .hero-area .hero-right .title h5{
   text-transform: capitalize;
